# emojinie

./: .eslintignore  .eslintrc.json  .prettierignore  .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  publish.yml  test.yml
scripts/: generateEmojiData.mts  generateEmojiLocalizedIndex.mts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/searchIndices/: da.json  de.json  en-gb.json  en.json  es-mx.json  es.json  et.json  fi.json  fr.json  hu.json  it.json  ja.json  ko.json  lt.json  ms.json  nb.json  nl.json  pl.json  pt.json  ru.json  sv.json  th.json  uk.json  zh-hant.json  zh.json
src-tauri/src/: command.rs  external.rs  main.rs  main_window.rs  settings.rs  spotlight.rs  window_ext.rs
src-tauri/src/command/: emoji.rs  paste.rs  result.rs
src/apis/: emojiApi.ts
src/components/: AbsolutePopover.tsx  AutoSizing.tsx  EmojiGrid.tsx  EmojiList.tsx  EmojiListItem.tsx  EmojiMenu.tsx  FilterableMenu.tsx  Footer.tsx  HStack.tsx  Hotkey.tsx  HotkeyInput.tsx  Label.tsx  MainInput.tsx  Popover.tsx  StatusBar.tsx  SuggestWithAILabel.tsx  UIThemeProvider.tsx
src/contants/: hotkey.ts
src/contexts/: EmojiDataContext.tsx  RouterStateContext.tsx  SettingsContext.tsx
src/hooks/: useAutoScroll.ts  useAutoStart.ts  useComponentFocusChanged.ts  useComposing.ts  useEmojiDB.ts  useFocusHandlerWithWindow.ts  useFocutState.ts  useFormValue.ts  useGlobalShortcut.ts  useInstallActions.ts  useLangs.ts  useLogChange.ts  useMainWindow.ts  useMenuControl.tsx  useMouseMove.ts  usePopovert.tsx  useQueryCommand.ts  useSpotlightWindow.ts  useSuggestEmojis.ts  useTextColor.ts  useWindowClose.ts  useWindowFocus.ts
src/libs/: command.ts  emojiIndex.test.ts  emojiIndex.ts  emojiParser.ts  emojiShortcodes.test.ts  emojiShortcodes.ts  emojidb.ts  emojis.test.ts  emojis.ts  hotkey.ts  settings.ts
src/main/: App.tsx  InitialPage.tsx  SuggestionResultPage.tsx  main.tsx
src/pages/: InitialPage.tsx  SuggestionResultPage.tsx
src/settings/: Settings.tsx  main.tsx
src/types/: action.ts  emoji.ts  emojiCategory.ts  emojiData.ts
src/utils/: actions.ts  tokenizeSearchQuery.ts
