[package]
name = "EmoGenius"
version = "0.0.0"
description = "A Tauri App"
authors = ["kohii"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["clipboard-all", "global-shortcut-all", "shell-execute", "shell-open", "system-tray", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4.17"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace" }
env_logger = "0.10.0"
itertools = "0.10.5"
enigo = "0.1.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
